Add the tablet queries

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="hero-title">Renaissance Unleashed: <br><span> Analog & Triax Watches</span></div>
                 <div class="hero-textbtn">
                     <p>Step into a <span><b>bold</b></span> era – witness the resurrection of timeless style and athletic <br> precision! Experience the fusion of iconic design and cutting-edge <br> performance in the <span><b>Nike Analog and Triax Watches.</b></span></p>
-                    <a href="#row-container"><button>Order now</button></a>
+                    <a class="btn-link" href="#row-container"><button>Order now</button></a>
                 </div>
             </div>
             <img class="hero-img" src="images/file.png" alt="Nike watches">
